# Engine

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  PROJECT_INDEX.md  README.md  REVIEW_FINDINGS.md  THIRD_PARTY.md  TODO.md  cpp_project_review_report.md  imgui.ini  production_engine_gap_list.md  production_engine_milestones.md  production_engine_phased_todo.md  run.cmd  sanitizer_suppressions.txt
app/: CMakeLists.txt  main.cpp
audio/: CMakeLists.txt
audio/include/engine/audio/: audio.h
audio/src/: audio.cpp
core/: CMakeLists.txt
core/include/engine/core/: allocator.h  bootstrap.h  console.h  cvar.h  debug_draw.h  engine_stats.h  entity.h  event_bus.h  fixed_hash_table.h  hash.h  input.h  input_map.h  job_system.h  json.h  linear_allocator.h  logging.h  mem_tracker.h  mesh_asset.h  platform.h  pool_allocator.h  profiler.h  reflect.h  service_locator.h  sparse_set.h  string_util.h  touch_input.h  vfs.h
core/src/: bootstrap.cpp  console.cpp  cvar.cpp  debug_draw.cpp  engine_stats.cpp  event_bus.cpp  input.cpp  input_map.cpp  job_system.cpp  json.cpp  linear_allocator.cpp  logging.cpp  mem_tracker.cpp  pch.h  platform.cpp  profiler.cpp  reflect.cpp  service_locator.cpp  touch_input.cpp  vfs.cpp
editor/: CMakeLists.txt
editor/include/engine/editor/: command_history.h  debug_camera.h  editor.h  editor_camera.h
editor/src/: command_history.cpp  debug_camera.cpp  editor.cpp  editor_camera.cpp  editor_commands.cpp  editor_commands.h  editor_panels_assets.cpp  editor_panels_assets.h  editor_panels_diagnostics.cpp  editor_panels_diagnostics.h  editor_panels_inspector.cpp  editor_panels_inspector.h  editor_panels_main.cpp  editor_panels_main.h  editor_panels_viewport.cpp  editor_panels_viewport.h  editor_session.cpp  editor_session.h
math/: CMakeLists.txt
math/include/engine/math/: aabb.h  component_types.h  mat4.h  math_detail.h  quat.h  ray.h  (+5 more)
math/src/: aabb.cpp  mat4.cpp  quat.cpp  ray.cpp  sphere.cpp  transform.cpp  vec2.cpp  vec3.cpp  vec4.cpp
physics/: CMakeLists.txt
physics/src/: ccd.cpp  constraint_solver.cpp  contact_manifold.cpp  convex_hull.cpp  pch.h  physics.cpp  physics_query.cpp
physics/src/joints/: ball_joint.cpp  distance_joint.cpp  fixed_joint.cpp  hinge_joint.cpp  joint_solvers.h  slider_joint.cpp  spring_joint.cpp
renderer/: CMakeLists.txt
renderer/src/: asset_database.cpp  asset_manager.cpp  asset_streaming.cpp  command_buffer.cpp  command_buffer_builder.cpp  command_buffer_capture.cpp  command_buffer_capture.h  command_buffer_context.cpp  command_buffer_context.h  command_buffer_flush.cpp  command_buffer_ibl.cpp  command_buffer_ibl.h  command_buffer_math.cpp  command_buffer_math.h  command_buffer_post_resources.cpp  command_buffer_post_resources.h  command_buffer_sky.cpp  command_buffer_sky.h  gpu_profiler.cpp  light_culling.cpp  lru_cache.cpp  material_loader.cpp  mesh_loader.cpp  mesh_primitives.cpp  pass_resources.cpp  pch.h  post_process_stack.cpp  render_device_gl.cpp  render_settings.cpp  shader_system.cpp  shadow_map.cpp  texture_loader.cpp
runtime/: CMakeLists.txt
runtime/include/engine/: engine.h
runtime/src/: camera_manager.cpp  editor_bridge.cpp  engine.cpp  engine_pipeline.cpp  entity_pool.cpp  pch.h  physics_bridge.cpp  prefab_serializer.cpp  reflect_types.cpp  render_prep_pipeline.cpp  scene_serializer.cpp  scripting_bridge.cpp  serialization_util.cpp  serialization_util.h  service_registry.cpp  spring_arm_update.cpp  timer_manager.cpp  world.cpp
scripting/: CMakeLists.txt
scripting/src/: asset_bindings.cpp  asset_bindings.h  audio_bindings.cpp  audio_bindings.h  binding_util.cpp  binding_util.h  body_bindings.cpp  body_bindings.h  camera_bindings.cpp  camera_bindings.h  cheat_bindings.cpp  cheat_bindings.h  collision_bindings.cpp  collision_bindings.h  coroutine_bindings.cpp  coroutine_bindings.h  dap_server.cpp  dap_server_internal.h  debug_bindings.cpp  debug_bindings.h  deferred_mutations.cpp  deferred_mutations.h  entity_handle.cpp  entity_handle.h  entity_lifecycle_bindings.cpp  entity_lifecycle_bindings.h  entity_pool_bindings.cpp  entity_pool_bindings.h  entity_script_bindings.cpp  entity_script_bindings.h  game_bindings.cpp  game_bindings.h  input_bindings.cpp  input_bindings.h  light_bindings.cpp  light_bindings.h  lua_state.cpp  lua_state.h  mesh_material_bindings.cpp  mesh_material_bindings.h  (+14 more)
tests/benchmark/: CMakeLists.txt  ecs_perf_test.cpp  instancing_batch_test.cpp  perf_baseline.json  physics_perf_test.cpp
tests/integration/: CMakeLists.txt  asset_dep_load_test.cpp  async_load_test.cpp  bindgen_test.cpp  camera_test.cpp  coroutine_test.cpp  dap_test.cpp  determinism_test.cpp  ecs_stress_50k.cpp  game_mode_test.cpp  hotreload_test.cpp  lifecycle_test.cpp  lua_lifecycle_test.cpp  sandbox_test.cpp  scheduler_stress.cpp  smoke_integration.cpp  streaming_budget_test.cpp  thread_count_determinism.cpp  timer_test.cpp  vertical_slice_integration.cpp
tests/unit/: CMakeLists.txt  animation_import_test.cpp  asset_database_test.cpp  asset_hash_test.cpp  asset_manager_test.cpp  async_streaming_test.cpp  audio_test.cpp  auto_exposure_test.cpp  ccd_test.cpp  collision_layer_test.cpp  command_buffer_test.cpp  command_history_test.cpp  cvar_console_test.cpp  debug_draw_test.cpp  deferred_light_component_test.cpp  dependency_graph_test.cpp  determinism_test.cpp  deterministic_cook_test.cpp  ecs_stress_test.cpp  engine_pipeline_test.cpp  engine_stats_test.cpp  entity_pool_test.cpp  event_bus_test.cpp  fixed_hash_table_test.cpp  foliage_patch_component_test.cpp  gpu_profiler_test.cpp  import_settings_test.cpp  input_map_test.cpp  input_test.cpp  job_handle_generation_test.cpp  joint_test.cpp  light_culling_test.cpp  lru_cache_test.cpp  manifold_test.cpp  material_asset_test.cpp  math_test.cpp  mem_tracker_test.cpp  mesh_loader_test.cpp  pass_resources_test.cpp  physics_query_test.cpp  (+29 more)
tools/asset_packer/: CMakeLists.txt  animation_import.cpp  animation_import.h  cgltf_impl.cpp  dependency_graph.cpp  dependency_graph.h  main.cpp  skeleton_import.cpp  skeleton_import.h
(+272 files in other folders)
